[project]
name = "qdspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hid>=1.0.7",
    "hidapi>=0.14.0.post4",
    "moviepy<2",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "pyglet==1.5.5",
    "pyqt6>=6.9.0",
    "pyserial>=3.5",
    "pywin32>=310",
]
