[project]
name = "QDSpy"
version = "0.9.6"
description = "A software for generating and presenting stimuli for visual neuroscience written in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6 ; sys_platform == 'linux'",
    "gpiozero>=2.0.1 ; sys_platform == 'linux'",
    "hid>=1.0.7",
    "hidapi>=0.14.0.post4",
    "moviepy<2",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "pyglet<2 ; sys_platform == 'linux'",
    "pyglet<2",
    "pyglet==1.5.5 ; sys_platform == 'win32'",
    "pyopengl>=3.1.9 ; sys_platform == 'linux'",
    "pyqt6>=6.9.0 ; sys_platform == 'win32'",
    "pyserial>=3.5",
    "pywin32>=310 ; sys_platform == 'win32'",
]
